force-app/main/default/objects/Interaction_Attendees__c/Interaction_Attendees__c.object-meta.xml
<CustomObject>
    <label>Interaction Attendee</label>
    <nameField>
        <displayFormat>IA-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interaction Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>