force-app/main/default/objects/Interaction_Attendees__c/fields/Attendee_Response__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Response__c</fullName>
    <label>Attendee Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>