force-app/main/default/objects/Interaction_Attendees__c/fields/EventId__c.field-meta.xml
<CustomField>
    <fullName>EventId__c</fullName>
    <label>Event</label>
    <length>18</length>
    <type>Text</type>
</CustomField>