force-app/main/default/objects/Interaction_Attendees__c/fields/InteractionId__c.field-meta.xml
<CustomField>
    <fullName>InteractionId__c</fullName>
    <label>Interaction</label>
    <referenceTo>Interaction__c</referenceTo>
    <relationshipLabel>Interaction Attendees</relationshipLabel>
    <relationshipName>Interaction_Attendees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>