force-app/main/default/objects/Interaction_Attendees__c/fields/IsOrganizer__c.field-meta.xml
<CustomField>
    <fullName>IsOrganizer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Organizer</label>
    <type>Checkbox</type>
</CustomField>